<resources>
    <string name="app_name">EventApp</string>
    <string name="Login">Login</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="Register">Register</string>
    <string name="Submit">Submit</string>
    <string name="Email">Email</string>
    <string name="Name">Full Name</string>
    <string name="admin_login">Admin Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="venue">Venue</string>
    <string name="date">Date</string>
    <string name="co_ordinator_name">Co-ordinator Name</string>
    <string name="event_list">Event List</string>
</resources>