<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_login"
    tools:context="com.amitgujar.eventapp.Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_event"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/eventname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:hint="@string/event_name"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/venue"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:hint="@string/venue"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:hint="@string/date"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:inputType="date"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_dark_blue5_15">

        <EditText
            android:id="@+id/coordinatorname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/co_ordinator_name"
            android:textColorHint="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLines="1"
            android:autofillHints="" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/Submit"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_primary_15"
        android:textColor="@color/white"
        android:textSize="17sp"/>

</LinearLayout>